--- a/learn_bootstrap/style.css
+++ b/learn_bootstrap/style.css
@@ -16,3 +16,18 @@
 .cus-margin-1 {
   margin-left: 0px !important;
 }
+
+.cus-bg-big {
+  width: 100%;
+  height: 360px;
+  border-radius: 3px;
+  border: solid 1px black;
+  background-color: white;
+}
+
+.cus-bg-med {
+  width: 100%;
+  height: 50px;
+  border-radius: 3px;
+  border: solid 1px black;
+}
