--- a/learn_bootstrap/style.css
+++ b/learn_bootstrap/style.css
@@ -36,3 +36,11 @@
   border-radius: 3px;
   border: solid 1px blue;
 }
+
+.testRel {
+  position: relative;
+}
+
+.testAb {
+  position: absolute;
+}
