The all property'

--- a/css-doc/inherit.css
+++ b/css-doc/inherit.css
@@ -26,3 +26,12 @@ body {
 .my-class-3 a {
   color: unset;
 }
+
+blockquote {
+  background-color: red;
+  border: 2px solid green;
+}
+      
+.fix-this {
+  all: unset;
+}
