--- a/css-doc/before_after/style.css
+++ b/css-doc/before_after/style.css
@@ -4,3 +4,26 @@
 .box::after {
   content: "Ma bru"
 }  
+
+/* These pseudo-elements are also frequently used to insert an empty string, which can then be styled just like any element on the page.
+
+In this next example, we have added an empty string using the ::before pseudo-element. We have set this to display: block in order that we can style it with a width and height. We then use CSS to style it just like any element. You can play around with the CSS and change how it looks and behaves. */
+
+.box_one::before {
+  content: "";
+  display: block;
+  width: 100px;
+  height: 100px;
+  background-color: rebeccapurple;
+  border: 1px solid black;
+}   
+
+
+/* Inserting strings of text from CSS isn't really something we do very often on the web however, as that text is inaccessible to some screen readers and might be hard for someone to find and edit in the future.
+
+A more valid use of these pseudo-elements is to insert an icon, for example the little arrow added in the example below, which is a visual indicator that we wouldn't want read out by a screenreader: */
+
+ /* not supported */
+body::spelling-error {
+  color: red;
+}
