--- a/css-doc/box_model/style.css
+++ b/css-doc/box_model/style.css
@@ -25,4 +25,16 @@ ul {
 .block {
   display: block;
 }      
-  
+
+.box {
+  border: 5px solid rebeccapurple;
+  background-color: lightgray;
+  padding: 40px;
+  margin: 40px;
+  width: 300px;
+  height: 150px;
+}
+
+.alternate {
+  box-sizing: border-box;
+}
