What the hec, margin collapsing

--- a/css-doc/box_model/style.css
+++ b/css-doc/box_model/style.css
@@ -35,6 +35,30 @@ ul {
   height: 150px;
 }
 
+/* Alternate includes border size */
 .alternate {
   box-sizing: border-box;
+  width: 390px;
+  height: 240px;
+}
+
+/* A key thing to understand about margins is the concept of margin collapsing. 
+If you have two elements whose margins touch, and both margins are positive, 
+those margins will combine to become one margin, which is the size of the 
+largest individual margin. If one or both margins are negative, the amount of 
+negative value will subtract from the total.
+
+In the example below, we have two paragraphs. The top paragraph has a 
+margin-bottom of 50 pixels. The second paragraph has a margin-top of 30 pixels. 
+The margins have collapsed together so the actual margin between the boxes is 50 
+pixels and not the total of the two margins. */
+
+
+/* this one wins */
+.one {
+  margin-bottom: 50px; 
+}
+
+.two {
+  margin-top: 25px;
 }
