--- a/css-doc/background_image/style.css
+++ b/css-doc/background_image/style.css
@@ -1,10 +1,12 @@
 .box {
-  width: 200px;
-  height: 200px;
-  background-image: url("./balloons.jpg");
+  width: 500px;
+  height: 500px;
+  background-image: url(balloons.jpg);
   /* background-repeat: no-repeat; */
-  background-size: contain;
+  /* background-size: contain;z */
+  background-size: 100% 100%;
   background-position: top center;
+  display: inline-block;
 }
 
 .a {
