--- a/css-doc/background_image/style.css
+++ b/css-doc/background_image/style.css
@@ -3,7 +3,7 @@
   height: 500px;
   background-image: url(balloons.jpg);
   /* background-repeat: no-repeat; */
-  /* background-size: contain;z */
+  /* background-size: contain; */
   background-size: 100% 100%;
   background-position: top center;
   display: inline-block;
