--- a/css-doc/layout/grid_one/index.html
+++ b/css-doc/layout/grid_one/index.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <div class="box1">One</div>
+        <div class="box2">Two</div>
+        <div class="box3">Three</div>
+    </div>
   
 
 </body>
