--- a/css-doc/layout/simple_positioning/index.html
+++ b/css-doc/layout/simple_positioning/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Positioning</h1>
 
-    <p>I am a basic block level element.</p>
-    <p class="positioned">I am a basic block level element.</p>
-    <p>I am a basic block level element.</p>
+    <p>I am a basic block level element 1.</p>
+    <p class="positioned">I am a basic block level element 2.</p>
+    <p>I am a basic block level element 3.</p>
   
 
 </body>
