--- a/css-doc/layout/float_three/style.css
+++ b/css-doc/layout/float_three/style.css
@@ -8,7 +8,8 @@ body {
 .wrapper {
   background-color: rgb(79,185,227);
   padding: 10px;
-  color: #fff; 
+  color: #fff;
+  overflow: auto; 
 }
     
 .box {
@@ -19,11 +20,5 @@ body {
   border-radius: 5px;
   background-color: rgb(207,232,220);
   padding: 1em;
-}
- .cleared {
-   clear: left;
- }
-
-
-
+} 
 
