--- a/css-doc/layout/float_two/style.css
+++ b/css-doc/layout/float_two/style.css
@@ -19,11 +19,11 @@ body {
   border-radius: 5px;
   background-color: rgb(207,232,220);
   padding: 1em;
+} 
+
+.wrapper::after {
+  content: "";
+  clear: both;
+  display: block;
 }
- .cleared {
-   clear: left;
- }
-
-
-
 
