--- a/css-doc/layout/float_three/style.css
+++ b/css-doc/layout/float_three/style.css
@@ -9,7 +9,10 @@ body {
   background-color: rgb(79,185,227);
   padding: 10px;
   color: #fff;
-  overflow: auto; 
+  /* this is the hacky way */
+  /* overflow: auto;  */
+  /* modern fix */
+  display: flow-root; 
 }
     
 .box {
