--- a/css-doc/layout/multicol/mult-col-one/style.css
+++ b/css-doc/layout/multicol/mult-col-one/style.css
@@ -1,3 +1,6 @@
 .container {
+  /* With more than needed cols it seems to over
+  flow the content to the left over cols */
+  /* column-count: 5; */
   column-count: 3;
 }
