--- a/css-doc/layout/multicol/mult-col-one/style.css
+++ b/css-doc/layout/multicol/mult-col-one/style.css
@@ -3,5 +3,7 @@
   /* column-count: 3; */
   /* gives you as many cols of this width as possible 
   ie smaller screens get less cols than bigger ones */
+  /* the container needs to be divisible by this amount though? */
   column-width: 200px;
+  column-gap: 50px;
 }
