--- a/css-doc/layout/multicol/mult-col-one/style.css
+++ b/css-doc/layout/multicol/mult-col-one/style.css
@@ -8,3 +8,10 @@
   column-gap: 50px;
   column-rule: 4px dotted rgb(79, 185, 227);
 }
+
+h2 {
+  column-span: all;
+  background-color: rgb(79, 185, 227);
+  color: white;
+  padding: .5em;
+}
