--- a/css-doc/layout/fundamental-layout-comprehension/styles.css
+++ b/css-doc/layout/fundamental-layout-comprehension/styles.css
@@ -21,11 +21,22 @@ body {
     margin: 0 auto;
     padding: 0 20px;
     max-width: 980px;
+    display: flex;
+  }
+
+  article {
+    flex: 2;
+  }
+
+  aside {
+    flex: 1;
   }
   
   nav {
     background-color: #000;
     padding: .5em;
+    position: sticky;
+    top: 0px;
   }
   
   nav ul {
@@ -46,8 +57,15 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1px;
+    row-gap: 1px;
   }
 
   .feature {
       width: 200px;
+      float: left;
+      padding-right: 20px;
+      padding-bottom: 5px;
   }
