--- a/css-doc/layout/flexbox_grids/index.html
+++ b/css-doc/layout/flexbox_grids/index.html
@@ -24,9 +24,9 @@
       </div>
       <div class="row">
         <div class="col span1">13</div>
-        <div class="col span6">14</div>
-        <div class="col span3">15</div>
-        <div class="col span2">16</div>
+        <div class="col span11">14</div>
+        <!-- <div class="col span3">15</div>
+        <div class="col span2">16</div> -->
       </div>
     </div>
 
