--- a/css-doc/layout/fex_one/index.html
+++ b/css-doc/layout/fex_one/index.html
@@ -9,11 +9,7 @@
 <body>
   <div class="wrapper">
     <div class="box1">One</div>
-    <div class="box2">Two</div>
-    <div class="box3">Three</div>
-    <div class="box3">Three</div>
-    <div class="box3">Three</div>
-    <div class="box3">Three</div>
+    <div class="box3"><i class="icon fas fa-tools"></i></div>
   </div>
 
 </body>
